// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkDialingCodeList should render correctly 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "dialingCode": "0",
            "id": "0",
            "name": "Zero",
          },
        ],
        "title": "Z",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "1",
            "id": "1",
            "name": "One",
          },
        ],
        "title": "O",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "2",
            "id": "2",
            "name": "Two",
          },
        ],
        "title": "T",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "dialingCode": "0",
            "id": "0",
            "name": "Zero",
          },
        ],
        "title": "Z",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "1",
            "id": "1",
            "name": "One",
          },
        ],
        "title": "O",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "2",
            "id": "2",
            "name": "Two",
          },
        ],
        "title": "T",
      },
    ]
  }
  stickyHeaderIndices={
    Array [
      0,
      3,
      6,
    ]
  }
  stickySectionHeadersEnabled={true}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(241, 242, 248)",
            "paddingHorizontal": 16,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Object {
                "color": "rgb(17, 18, 54)",
              },
            ]
          }
        >
          Z
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="0 Zero"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 24,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.12,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            0 Zero
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "rgb(7, 112, 227)",
                  "opacity": 0,
                },
              ],
            ]
          }
        >
          
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgb(17, 18, 54)",
                "bottom": 0,
                "flex": 1,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(241, 242, 248)",
            "paddingHorizontal": 16,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Object {
                "color": "rgb(17, 18, 54)",
              },
            ]
          }
        >
          O
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="1 One"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 24,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.12,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            1 One
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "rgb(7, 112, 227)",
                  "opacity": 0,
                },
              ],
            ]
          }
        >
          
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgb(17, 18, 54)",
                "bottom": 0,
                "flex": 1,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(241, 242, 248)",
            "paddingHorizontal": 16,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Object {
                "color": "rgb(17, 18, 54)",
              },
            ]
          }
        >
          T
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="2 Two"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 24,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.12,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            2 Two
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "rgb(7, 112, 227)",
                  "opacity": 0,
                },
              ],
            ]
          }
        >
          
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgb(17, 18, 54)",
                "bottom": 0,
                "flex": 1,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`iOS BpkDialingCodeList should render correctly with "selectedId" set 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "dialingCode": "0",
            "id": "0",
            "name": "Zero",
          },
        ],
        "title": "Z",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "1",
            "id": "1",
            "name": "One",
          },
        ],
        "title": "O",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "2",
            "id": "2",
            "name": "Two",
          },
        ],
        "title": "T",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "dialingCode": "0",
            "id": "0",
            "name": "Zero",
          },
        ],
        "title": "Z",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "1",
            "id": "1",
            "name": "One",
          },
        ],
        "title": "O",
      },
      Object {
        "data": Array [
          Object {
            "dialingCode": "2",
            "id": "2",
            "name": "Two",
          },
        ],
        "title": "T",
      },
    ]
  }
  stickyHeaderIndices={
    Array [
      0,
      3,
      6,
    ]
  }
  stickySectionHeadersEnabled={true}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(241, 242, 248)",
            "paddingHorizontal": 16,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Object {
                "color": "rgb(17, 18, 54)",
              },
            ]
          }
        >
          Z
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="0 Zero"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 24,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.12,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "color": "rgb(7, 112, 227)",
                  },
                ],
              ]
            }
          >
            0 Zero
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "rgb(7, 112, 227)",
                  "opacity": 0,
                },
                Object {
                  "opacity": 1,
                },
              ],
            ]
          }
        >
          
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgb(17, 18, 54)",
                "bottom": 0,
                "flex": 1,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(241, 242, 248)",
            "paddingHorizontal": 16,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Object {
                "color": "rgb(17, 18, 54)",
              },
            ]
          }
        >
          O
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="1 One"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 24,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.12,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            1 One
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "rgb(7, 112, 227)",
                  "opacity": 0,
                },
              ],
            ]
          }
        >
          
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgb(17, 18, 54)",
                "bottom": 0,
                "flex": 1,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "backgroundColor": "rgb(241, 242, 248)",
            "paddingHorizontal": 16,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "System",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.12,
                "textAlign": "left",
              },
              Object {
                "fontWeight": "700",
              },
              Object {
                "color": "rgb(17, 18, 54)",
              },
            ]
          }
        >
          T
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityLabel="2 Two"
        accessibilityRole="button"
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            null,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            resizeMode="contain"
            style={
              Array [
                Object {
                  "borderColor": "rgb(221, 221, 229)",
                  "borderWidth": 1,
                },
                Object {
                  "height": 16,
                  "width": 24,
                },
                Array [
                  null,
                  Object {
                    "marginRight": 24,
                  },
                ],
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "rgb(17, 18, 54)",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0.12,
                  "textAlign": "left",
                },
                Object {},
                Array [
                  Object {
                    "flex": 1,
                  },
                ],
              ]
            }
          >
            2 Two
          </Text>
        </View>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "rgb(17, 18, 54)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Object {
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "rgb(7, 112, 227)",
                  "opacity": 0,
                },
              ],
            ]
          }
        >
          
        </Text>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgb(17, 18, 54)",
                "bottom": 0,
                "flex": 1,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`iOS should render correctly with suggested IDs 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "dialingCode": "1",
        "id": "1",
        "name": "One",
      },
      Object {
        "dialingCode": "3",
        "id": "3",
        "name": "Three",
      },
    ],
    "title": "Suggested for you",
  },
  Object {
    "data": Array [
      Object {
        "dialingCode": "0",
        "id": "0",
        "name": "Zero",
      },
    ],
    "title": "Z",
  },
  Object {
    "data": Array [
      Object {
        "dialingCode": "1",
        "id": "1",
        "name": "One",
      },
    ],
    "title": "O",
  },
  Object {
    "data": Array [
      Object {
        "dialingCode": "2",
        "id": "2",
        "name": "Two",
      },
      Object {
        "dialingCode": "3",
        "id": "3",
        "name": "Three",
      },
    ],
    "title": "T",
  },
]
`;
